# sqlixx-work

./: .clang-format  .clang-tidy  .gersemirc  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  REUSE.toml  exemplar
.devcontainer/clang/: devcontainer.json
.devcontainer/gcc/: Dockerfile  devcontainer.json
.github/actions/setup-llvm/: action.yaml
.github/workflows/: ci-test.yaml
cmake/: EnableClangTidy.cmake  EnableSanitizers.cmake  ProjectDependencies.cmake  SQLixxConfig.cmake.in  TestDependencies.cmake  collect_gcov_data.sh  collect_llvm_data.sh  config.cmake.in  config.cmake.in.license  enable-clang-tidy.cmake  enable-coverage.cmake  enable-experimental-import-std.cmake  enable-sanitizer.cmake  fetch-test-dependencies.cmake  toolchain-gcc.cmake  toolchain-llvm.cmake
src/: binders.cppm  connection.cppm  connection.open.cppm  error.cppm  error.sqlite.cppm  handles.cppm  module.cppm  readers.cppm  sqlite_error.cppm  sqlixx.cppm  statement.cppm  statement.prepare.cppm
src/sqlixx/: binders.cppm  error.sqlite.cppm  handles.cppm  statement.cppm
tests/: CMakeLists.txt  binders_test.cpp  connection_test.cpp  readers_test.cpp  sqlite_error_test.cpp  sqlite_mock.cpp  sqlite_mock.hpp  statement_test.cpp
tests/old/: CMakeLists.txt  error_test.cpp
